--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
 	"private": true,
 	"homepage": "https://raptors1711.com/",
 	"dependencies": {
-		"sass": "1.97.2",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"react-router-dom": "7.12.0",
-		"react-scripts": "5.0.1",
+		"sass": "1.97.2",
 		"typescript": "5.9.3",
 		"web-vitals": "^5.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "25.0.9",
 		"@types/react": "19.2.8",
-		"@types/react-dom": "19.2.3"
+		"@types/react-dom": "19.2.3",
+		"@vitejs/plugin-react": "^5.1.2",
+		"vite": "^7.3.1",
+		"vite-plugin-svgr": "^4.5.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --passWithNoTests",
-		"eject": "react-scripts eject"
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
 	},
 	"eslintConfig": {
 		"extends": [
