--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,4 +1,4 @@
-name: Build & Test React App
+name: Build Vite App
 
 on:
   push:
@@ -20,14 +20,11 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 25.x
-          cache: 'npm'
-          
-      - name: Install NPM packages
+          node-version: 20
+          cache: "npm"
+
+      - name: Install dependencies
         run: npm ci
 
       - name: Build project
         run: npm run build
-
-      - name: Run tests
-        run: npm test -- --watch=false
